--- a/extension/package.json
+++ b/extension/package.json
@@ -8,7 +8,16 @@
 		"coverage": "nyc --reporter=lcov npm run test"
 	},
 	"dependencies": {
-		"extension-cli": "^1.2.4",
-		"fuse.js": "^7.1.0"
+		"extension-cli": "^1.2.4"
+	},
+	"xtbuild": {
+		"scss_bundles": [
+			{
+				"src": [
+					"./src/styles.css"
+				],
+				"name": "styles"
+			}
+		]
 	}
 }
